[tool.poetry]
name = "marcxml2csv"
version = "0.1.0"
description = "A simple converter of MARCXML to CSV/TSV"
authors = ["Eetu Mäkelä <eetu.makela@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

