[tool.poetry]
name = "marcxml2csv"
version = "1.0.5"
description = "A simple converter of MARCXML/PICAXML to CSV/TSV"
authors = ["Eetu Mäkelä <eetu.makela@helsinki.fi>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hsci-r/marcxml2csv"
keywords = [
    "MARCXML",
    "PICA XML",
    "bibliographic data",
    "data conversion"
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.8.0"
click = "^8.1.3"
tqdm = "^4.64.0"
hsciutil = "^0.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pre-commit = "^2.13.0"
pylint = "^2.13.9"

[tool.poetry.scripts]
picaxml2csv = "marcxml2csv.picaxml2csv:convert"
marcxml2csv = "marcxml2csv.marcxml2csv:convert"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
