[tool.poetry]
name = "marcxml2csv"
version = "1.1.1"
description = "A simple converter of MARCXML/PICAXML to CSV/TSV/parquet"
authors = ["Eetu Mäkelä <eetu.makela@helsinki.fi>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hsci-r/bibxml2"
keywords = [
    "MARCXML",
    "PICA XML",
    "bibliographic data",
    "data conversion"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
lxml = ">=5.4.0"
click = ">=8.2.1"
tqdm = ">=4.67.1"
hsciutil = ">=0.1.2"
fsspec = "^2025.5.1"
pyarrow = "^20.0.0"
s3fs = "^2025.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
pre-commit = "^2.21.0"
pylint = "^2.17.7"

[tool.poetry.scripts]
picaxml2 = "bibxml2.picaxml2:convert_picaxml"
marcxml2 = "bibxml2.marcxml2:convert_marcxml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
